# vdub

./: Cargo.toml  README.md
config/: config-example.toml
docs/: logo-options.md  skull_art.txt
src/: main.rs  router.rs
src/config/: mod.rs
src/dto/: mod.rs
src/handler/: config_handler.rs  file_handler.rs  subtitle_task.rs
src/provider/: mod.rs
src/provider/aliyun/: asr.rs  mod.rs  oss.rs  tts.rs  voice_clone.rs
src/provider/local/: edge_tts.rs  fasterwhisper.rs  mlx_audio.rs  mlx_whisper.rs  mod.rs  whispercpp.rs  whisperkit.rs
src/provider/openai/: mod.rs
src/service/: audio_to_subtitle.rs  link_to_file.rs  mod.rs  split_audio.rs  srt_embed.rs  srt_to_speech.rs  timestamps.rs  upload_subtitles.rs
src/storage/: mod.rs
src/types/: task.rs
src/util/: audio.rs  cli_art.rs  cmd.rs  deps.rs  download.rs  mod.rs  text.rs  video.rs
static/: index.html
