[package]
name = "krillin_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }

# WebSocket (for Aliyun TTS)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
dashmap = "6"

# UUID
uuid = { version = "1", features = ["v4"] }

# Misc
rand = "0.8"
regex = "1"
url = "2"
async-trait = "0.1"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
reqwest-eventsource = "0.6"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
